--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
     implementation 'com.parse:parseui-widget-android:0.0.2'
+
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
 }
