--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,7 @@ dependencies {
     implementation 'com.parse:parseui-widget-android:0.0.2'
 
     implementation 'com.android.support:recyclerview-v7:27.1.0'
+
+    implementation 'org.parceler:parceler-api:1.1.6'
+    annotationProcessor 'org.parceler:parceler:1.1.6'
 }
