--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
                 android:resource="@xml/fileprovider" />
         </provider>
 
-        <activity android:name=".CreatePostActivity"></activity>
+        <activity android:name=".CreatePostActivity" />
+        <activity android:name=".PostDetailActivity"></activity>
     </application>
 
 </manifest>
