--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name=".HomeActivity" />
         <activity
             android:name=".CreateAccountActivity" />
-        <activity android:name=".SettingsActivity" />
+        <activity android:name=".SettingsFragment" />
 
         <!-- make sure within the application tag, otherwise app will crash with XmlResourceParser errors -->
         <provider
@@ -36,7 +36,6 @@
                 android:resource="@xml/fileprovider" />
         </provider>
 
-        <activity android:name=".CreatePostActivity" />
         <activity android:name=".PostDetailActivity" />
     </application>
 
