--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     annotationProcessor 'org.parceler:parceler:1.1.6'
 
     implementation "com.android.support:design:${supportLibVersion}"
+
+    implementation "android.arch.paging:runtime:1.0.0"
 }
